Update base to 1.2.0 and test filtering and configuration properties reading resources issue

--- a/src/main/resources/com/exclamationlabs/connid/base/h2example/Messages.properties
+++ b/src/main/resources/com/exclamationlabs/connid/base/h2example/Messages.properties
@@ -16,4 +16,6 @@
 #
 ##############################################################################
 
-h2example.connector.display=H2Example 
+h2example.connector.display=H2Example
+testme.display=Test AA
+help.display=Test BB
